Profile Issues fixing and the matches API and Front end updated

--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.css
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.css
@@ -26,3 +26,18 @@
     border: 1px solid #ffffff !important;
     background: #28a745 !important;
 }
+.btn-fltr {
+    color: #212529;
+    background-color: #ffffff;
+    border-color: #ffffff;
+    box-shadow: 2px 2px 2px 1px #dfdfdf;
+    margin-right: 10px;
+    margin-bottom: 14px;
+    padding: 4px 8px;
+    font-size: 12px;
+}.btn-fltr:hover {
+    background-color: #ffffff;
+    border-color: #ffd3e2;
+    box-shadow: 3px 3px 3px 2px #dfdfdf;
+    color: #ff2972;
+}
