--- a/frontend/src/app/modules/features/employer/profile/employer-profile/employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-profile/employer-profile.component.html
@@ -61,15 +61,15 @@
       <!--Tab Section-->
       <div class="col-lg-8 col-md-12 company-info-tab">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-employerDetails" role="presentation">
+          <li class="nav-item" role="presentation">
             <a class="nav-link active" id="company-tab" data-toggle="tab" href="#company" role="tab" aria-controls="company" aria-selected="true">About Company</a>
           </li>
-          <li class="nav-employerDetails" role="presentation">
+          <li class="nav-item" role="presentation">
             <a class="nav-link" id="jobs-tab" data-toggle="tab" href="#jobs" role="tab" aria-controls="jobs" aria-selected="false">Open Jobs</a>
           </li>
-          <!-- <li class="nav-employerDetails" role="presentation">
+           <li class="nav-item" role="presentation">
             <a class="nav-link" id="employees-tab" data-toggle="tab" href="#employees" role="tab" aria-controls="employees" aria-selected="false">Employees</a>
-          </li> -->
+          </li> 
         </ul>
         <div class="tab-content" id="myTabContent">
           <!--About Company-->
