--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Nunito', sans-serif !important;
-    font-size: 14px;
+    font-size: 13px;
 	color: #000000;
     letter-spacing: 0.25px;
 }
@@ -1403,6 +1403,12 @@ a:hover {
     transition: all ease 0.6s;
     border-radius: 10px!important;
 }
+.matching-post .custom-radio .custom-control-input~.custom-control-label:hover {
+    background-color: #ffffff;
+    border-color: #ffd3e2;
+    box-shadow: 2px 2px 2px 1px #dfdfdf;
+    color: #ff2972;
+}
 .matching-post .custom-radio .custom-control-input:checked~.custom-control-label{
     background-color: #9b9b9b;
     color: #fff;
@@ -2355,7 +2361,7 @@ a:hover {
     border-radius: 75px;
     color: #333;
     display: inline-block;
-    margin: 3px 0;
+    margin: 3px 2px;
 }
 
 .personal-info {
