--- a/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
@@ -106,7 +106,7 @@
 				<app-control-messages [control]="ticket['controls']['title']"></app-control-messages>
 			</div>
 			<div class="col-lg-5 col-md-4">
-				<input formControlName="value" maxlength="32" class="form-control mt-4" type="text" placeholder="Reuirement">
+				<input formControlName="value" maxlength="32" class="form-control mt-4" type="text" placeholder="Requirement">
 				<app-control-messages [control]="ticket['controls']['value']"></app-control-messages>
 			</div>
 			<div class="col-lg-2 col-md-4" style="top: 25px;">
