Matches Page Design and the Post job Issue Fixing

--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -376,7 +376,7 @@
 
 <app-send-mail-job-preview
 *ngIf="isOpenedSendMailModal"
-[selectedJob]="selectedJob"
+[jobInfo]="selectedJob"
 [userInfo]="currentUserInfo"
 [toggleSendMailModal]="isOpenedSendMailModal"
 (onEvent)="onToggleSendMail($event)">
