--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
@@ -2,7 +2,10 @@
 <section class="sub-header">
   <div class="container">
     <div class="row">
-      <div class="col-lg-5">
+      <div class="col-lg-5 d-flex align-items-center">
+		<button (click)="onRedirectBack();" type="button" class="btn btn-outline-green btn-sm mr-1">
+					<i class="fas fa-arrow-left"></i>
+				</button>
         <ol class="breadcrumb">
           <li class="breadcrumb-item active" aria-current="page">Candidate View Profile</li>
         </ol>
@@ -30,7 +33,8 @@
 
           </div>
         </div>
-        <div class="row mt-3 info-box">
+        <app-shared-user-profile [userInfo]="userDetails"></app-shared-user-profile>
+        <!-- <div class="row mt-3 info-box">
           <div class="col-lg-4 caption">
             <ul class="list-group">
               <li class=" list-group-item text-capitalize">{{"dashboard.totalYearsOfExp" | translate }}</li>
@@ -138,7 +142,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="col-lg-4">
         <div class="title">
