--- a/frontend/src/app/shared/component/modal/send-mail-job-preview/send-mail-job-preview.component.html
+++ b/frontend/src/app/shared/component/modal/send-mail-job-preview/send-mail-job-preview.component.html
@@ -35,6 +35,11 @@
     [jobInfo]="jobInfo"
     [isDescrition]="true">
     </app-shared-job-profile>
+	<div class="col-lg-12 border-top pt-3">	</div>
+	<div class="col-lg-12">
+	<h6>Job Description</h6>
+	<p style="word-break: break-all;" [innerHtml]="jobInfo?.description"></p>		
+	</div>
     </div>
     <div class="modal-footer">
     <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
